Lv准确获取可见区大小

--- a/Client/Dt.Base/Themes/Styles/Base.xaml
+++ b/Client/Dt.Base/Themes/Styles/Base.xaml
@@ -106,7 +106,7 @@
                             <ColumnDefinition Width="*"/>
                             <ColumnDefinition Width="Auto"/>
                         </Grid.ColumnDefinitions>
-                        <ContentPresenter x:Name="TabContent"
+                        <a:SizedPresenter x:Name="TabContent"
                                           Content="{TemplateBinding SelectedContent}"
                                           ContentTransitions="{TemplateBinding ContentTransitions}"
                                           BorderThickness="1"
