--- a/Client/Dt.Sample/Styles/TestDemo1.xaml
+++ b/Client/Dt.Sample/Styles/TestDemo1.xaml
@@ -2,9 +2,11 @@
     x:Class="Dt.Sample.TestDemo1"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-    xmlns:a="using:Dt.Base">
+    xmlns:a="using:Dt.Base"
+    xmlns:s="using:Dt.Sample">
 
-    <Border Background="{StaticResource 主题蓝色}" Height="80" Width="80">
-        <TextBlock Text="&#xE0AA;" FontFamily="{StaticResource IconFont}" Foreground="White" FontSize="70" VerticalAlignment="Center" HorizontalAlignment="Center" />
-    </Border>
+    <s:My1 x:Name="_pnl">
+        <Button Content="Test" Click="Button_Click" />
+        <s:My2 x:Name="_child" />
+    </s:My1>
 </a:Win>
