--- a/Client/Dt.Base/Themes/Styles/TreeView.xaml
+++ b/Client/Dt.Base/Themes/Styles/TreeView.xaml
@@ -1,8 +1,7 @@
 ﻿<ResourceDictionary
-    xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation" 
+    xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-    xmlns:a="using:Dt.Base"
-    xmlns:tv="using:Dt.Base.TreeView">
+    xmlns:a="using:Dt.Base">
 
     <ResourceDictionary.MergedDictionaries>
         <ResourceDictionary Source="/Dt.Base/Themes/Global.xaml"/>
@@ -15,13 +14,11 @@
         <Setter Property="Template">
             <Setter.Value>
                 <ControlTemplate TargetType="a:Tv">
-                    <ScrollViewer x:Name="ScrollViewer"
-                                  HorizontalScrollMode="Disabled"
-                                  HorizontalScrollBarVisibility="Disabled"
-                                  VerticalScrollMode="Auto"
-                                  VerticalScrollBarVisibility="Auto">
-                        <tv:TvPanel x:Name="Panel" Background="Transparent" />
-                    </ScrollViewer>
+                    <Border x:Name="Border"
+                            Background="{TemplateBinding Background}"
+                            BorderBrush="{TemplateBinding BorderBrush}"
+                            BorderThickness="{TemplateBinding BorderThickness}"
+                            Padding="{TemplateBinding Padding}" />
                 </ControlTemplate>
             </Setter.Value>
         </Setter>
