Lv 初次加载无法滚动到底部，增加AutoScrollBottom 属性

--- a/Client/Dt.Base/Structure/Tools/SysTrace.xaml
+++ b/Client/Dt.Base/Structure/Tools/SysTrace.xaml
@@ -87,7 +87,7 @@
                         <RowDefinition Height="Auto" />
                         <RowDefinition Height="*" />
                     </Grid.RowDefinitions>
-                    <a:Lv x:Name="_lv" ShowItemBorder="False" />
+                    <a:Lv x:Name="_lv" ShowItemBorder="False" AutoScrollBottom="True" />
                     <Grid Background="{StaticResource 浅灰背景}"
                           BorderBrush="{StaticResource 浅灰边框}"
                           BorderThickness="1"
