--- a/Client/Dt.Base/Themes/Styles/Dialog.xaml
+++ b/Client/Dt.Base/Themes/Styles/Dialog.xaml
@@ -52,7 +52,8 @@
                                               Margin="100,0,0,0"
                                               Grid.Column="1"/>
                         </Grid>
-                        <ContentPresenter Content="{TemplateBinding Content}"
+                        <!--用在win模式的Tabs、phone模式的Tab、Dlg，为Lv Fv等内容提供区域大小-->
+                        <a:SizedPresenter Content="{TemplateBinding Content}"
                                           HorizontalContentAlignment="Stretch"
                                           VerticalContentAlignment="Stretch"
                                           Grid.Row="1" />
