--- a/Client/Dt.Base/Chat/ChatDetail.xaml
+++ b/Client/Dt.Base/Chat/ChatDetail.xaml
@@ -25,13 +25,6 @@
             <Setter Property="Grid.Column" Value="1" />
         </Style>
 
-        <Style x:Key="MsgFileList" TargetType="a:FileList">
-            <Setter Property="FixedVolume" Value="chat" />
-            <Setter Property="ImagePadding" Value="0" />
-            <Setter Property="VideoPadding" Value="0" />
-            <Setter Property="HorizontalAlignment" Value="Left" />
-        </Style>
-
         <DataTemplate x:Key="OtherMsgTemplate">
             <Grid Padding="10">
                 <Grid.ColumnDefinitions>
@@ -43,7 +36,12 @@
                 <!--Data不能写在Style中-->
                 <Path Data="M0,3 L4,0 L4,6" Style="{StaticResource OtherPath}" />
                 <StackPanel HorizontalAlignment="Left" Margin="0,0,100,0" Grid.Column="2">
-                    <a:Dot ID="Content" Tapped="OnOtherMsgTapped" RightTapped="OnOtherMsgRightTapped" Foreground="White" Background="{StaticResource 绿色背景}" Padding="10" />
+                    <a:Dot ID="Content"
+                           Tapped="OnMsgTapped"
+                           RightTapped="OnMsgRightTapped"
+                           Foreground="White"
+                           Background="{StaticResource 绿色背景}"
+                           Padding="10" />
                     <TextBlock Text="{Binding [stime], Converter={StaticResource CvAutoDate}}" FontSize="12" Foreground="{StaticResource 深灰边框}" />
                 </StackPanel>
             </Grid>
@@ -60,38 +58,21 @@
                 <!--Data不能写在Style中-->
                 <Path Data="M0,3 L4,0 L4,6" Style="{StaticResource OtherPath}" />
                 <StackPanel HorizontalAlignment="Left" Margin="0,0,100,0" Grid.Column="2">
-                    <a:FileList Data="{Binding [Content]}" Style="{StaticResource MsgFileList}" BorderBrush="{StaticResource 绿色背景}">
-                        <a:Ex.Menu>
-                            <a:Menu>
-                                <a:Mi ID="保存" Icon="保存" Cmd="{Binding CmdSaveAs}" />
-                                <a:Mi ID="分享" Icon="分享" Cmd="{Binding CmdShare}" />
-                            </a:Menu>
-                        </a:Ex.Menu>
-                    </a:FileList>
+                    <a:FileList Data="{Binding [Content]}"
+                                Holding="OnFileHolding"
+                                RightTapped="OnFileRightTapped"
+                                ImagePadding="0"
+                                VideoPadding="0"
+                                HorizontalAlignment="Left"
+                                BorderBrush="{StaticResource 绿色背景}" />
                     <TextBlock Text="{Binding [stime], Converter={StaticResource CvAutoDate}}" FontSize="12" Foreground="{StaticResource 深灰边框}" />
                 </StackPanel>
             </Grid>
         </DataTemplate>
 
         <DataTemplate x:Key="OtherLinkTemplate">
-            <Grid Padding="10">
-                <Grid.ColumnDefinitions>
-                    <ColumnDefinition Width="Auto" />
-                    <ColumnDefinition Width="Auto" />
-                    <ColumnDefinition Width="*" />
-                    <ColumnDefinition Width="60" />
-                </Grid.ColumnDefinitions>
-                <a:Dot ID="Icon" UIType="Image" Width="30" Height="30" VerticalAlignment="Top" />
-                <Path Data="M0,3 L4,0 L4,6" Style="{StaticResource OtherPath}" />
-                <StackPanel HorizontalAlignment="Left" Grid.Column="2">
-                    <StackPanel Padding="10" BorderBrush="{StaticResource 绿色背景}" BorderThickness="1">
-                        <TextBlock Text="我已完成今天的拉伸脊柱训练" HorizontalAlignment="Center" />
-                        <Image Source="ms-appx:///Bs.Kehu/Assets/chart.png" />
-                    </StackPanel>
-                    <TextBlock Text="{Binding [stime], Converter={StaticResource CvAutoDate}}"
-                               Style="{StaticResource 小字}"
-                               Foreground="{StaticResource 深灰边框}" />
-                </StackPanel>
+            <Grid>
+
             </Grid>
         </DataTemplate>
 
@@ -103,7 +84,12 @@
                     <ColumnDefinition Width="Auto" />
                 </Grid.ColumnDefinitions>
                 <StackPanel HorizontalAlignment="Right" Margin="100,0,0,0">
-                    <a:Dot ID="Content" Tapped="OnMyMsgTapped" RightTapped="OnMyMsgRightTapped" Foreground="White" Background="{StaticResource 主题蓝色}" Padding="10" />
+                    <a:Dot ID="Content"
+                           Tapped="OnMsgTapped"
+                           RightTapped="OnMsgRightTapped"
+                           Foreground="White"
+                           Background="{StaticResource 主题蓝色}"
+                           Padding="10" />
                     <TextBlock Text="{Binding [stime], Converter={StaticResource CvAutoDate}}" FontSize="12" Foreground="{StaticResource 深灰边框}" />
                 </StackPanel>
                 <!--Data不能写在Style中-->
@@ -120,7 +106,14 @@
                     <ColumnDefinition Width="Auto" />
                 </Grid.ColumnDefinitions>
                 <StackPanel HorizontalAlignment="Right" Margin="100,0,0,0">
-                    <a:FileList Data="{Binding [Content]}" Style="{StaticResource MsgFileList}" BorderBrush="{StaticResource 主题蓝色}" />
+                    <a:FileList Data="{Binding [Content]}"
+                                Holding="OnFileHolding"
+                                RightTapped="OnFileRightTapped"
+                                FixedVolume="chat"
+                                ImagePadding="0"
+                                VideoPadding="0"
+                                HorizontalAlignment="Left"
+                                BorderBrush="{StaticResource 主题蓝色}" />
                     <TextBlock Text="{Binding [stime], Converter={StaticResource CvAutoDate}}" FontSize="12" Foreground="{StaticResource 深灰边框}" />
                 </StackPanel>
                 <!--Data不能写在Style中-->
