--- a/Client/Dt.Base/Themes/Styles/FileList.xaml
+++ b/Client/Dt.Base/Themes/Styles/FileList.xaml
@@ -15,8 +15,7 @@
             <Setter.Value>
                 <ControlTemplate TargetType="a:FileList">
                     <!--边框在项中绑定-->
-                    <Border Child="{Binding Panel, RelativeSource={RelativeSource TemplatedParent}}"
-                            Padding="{TemplateBinding Padding}" />
+                    <a:FileListPanel x:Name="Panel" />
                 </ControlTemplate>
             </Setter.Value>
         </Setter>
@@ -60,7 +59,7 @@
                 <TextBlock x:Name="MsgBlock" Text="{TemplateBinding Percent}" Foreground="White" HorizontalAlignment="Center" VerticalAlignment="Center"/>
                 <TextBlock x:Name="NoteBlock" Text="点击可取消" Foreground="White" FontSize="{StaticResource 小字号}" Margin="0,0,0,6" HorizontalAlignment="Center" VerticalAlignment="Bottom"/>
             </Grid>
-            <Rectangle Stroke="{Binding Owner.BorderBrush, RelativeSource={RelativeSource TemplatedParent}}" Margin="0,0,-1,-1" IsHitTestVisible="False" />
+            <Rectangle Stroke="{Binding BorderBrush}" Margin="0,0,-1,-1" IsHitTestVisible="False" />
             
             <VisualStateManager.VisualStateGroups>
                 <VisualStateGroup x:Name="CommonStates">
@@ -111,7 +110,7 @@
     <ControlTemplate x:Key="VirImageTemplate" TargetType="a:FileItem">
         <Grid x:Name="RootGrid">
             <TextBlock Text="&#xE054;" Foreground="{StaticResource 深灰边框}" FontFamily="{StaticResource IconFont}" FontSize="40" HorizontalAlignment="Center" VerticalAlignment="Center" />
-            <Grid x:Name="ContentGrid" Margin="{Binding Owner.ImagePadding, RelativeSource={RelativeSource TemplatedParent}}" Background="Transparent" HorizontalAlignment="Center" VerticalAlignment="Center">
+            <Grid x:Name="ContentGrid" Margin="{Binding ImagePadding}" Background="Transparent" HorizontalAlignment="Center" VerticalAlignment="Center">
                 <Image x:Name="Image" Source="{TemplateBinding Bitmap}" />
             </Grid>
             <!--上传下载状态-->
@@ -120,7 +119,7 @@
                 <TextBlock x:Name="MsgBlock" Text="{TemplateBinding Percent}" Foreground="White" HorizontalAlignment="Center" VerticalAlignment="Center"/>
                 <TextBlock x:Name="NoteBlock" Text="点击可取消" Foreground="White" FontSize="{StaticResource 小字号}" Margin="0,0,0,6" HorizontalAlignment="Center" VerticalAlignment="Bottom"/>
             </Grid>
-            <Rectangle Stroke="{Binding Owner.BorderBrush, RelativeSource={RelativeSource TemplatedParent}}" Margin="0,0,-1,-1" IsHitTestVisible="False" />
+            <Rectangle Stroke="{Binding BorderBrush}" Margin="0,0,-1,-1" IsHitTestVisible="False" />
 
             <VisualStateManager.VisualStateGroups>
                 <VisualStateGroup x:Name="VirFileStates">
@@ -154,7 +153,7 @@
     <ControlTemplate x:Key="VirVideoTemplate" TargetType="a:FileItem">
         <Grid x:Name="RootGrid">
             <!--视频主流比例-->
-            <Grid x:Name="ContentGrid" Width="327" Height="184" Margin="{Binding Owner.VideoPadding, RelativeSource={RelativeSource TemplatedParent}}" Background="Black" VerticalAlignment="Center" HorizontalAlignment="Center">
+            <Grid x:Name="ContentGrid" Width="327" Height="184" Margin="{Binding VideoPadding}" Background="Black" VerticalAlignment="Center" HorizontalAlignment="Center">
                 <Image Source="{TemplateBinding Bitmap}" />
                 <Grid Width="60" Height="60" HorizontalAlignment="Center" VerticalAlignment="Center">
                     <Ellipse Stroke="White" StrokeThickness="2" IsHitTestVisible="False" />
@@ -168,7 +167,7 @@
                 <TextBlock x:Name="MsgBlock" Text="{TemplateBinding Percent}" Foreground="White" HorizontalAlignment="Center" VerticalAlignment="Center"/>
                 <TextBlock x:Name="NoteBlock" Text="点击可取消" Foreground="White" FontSize="{StaticResource 小字号}" Margin="0,0,0,6" HorizontalAlignment="Center" VerticalAlignment="Bottom"/>
             </Grid>
-            <Rectangle Stroke="{Binding Owner.BorderBrush, RelativeSource={RelativeSource TemplatedParent}}" Margin="0,0,-1,-1" IsHitTestVisible="False" />
+            <Rectangle Stroke="{Binding BorderBrush}" Margin="0,0,-1,-1" IsHitTestVisible="False" />
 
             <VisualStateManager.VisualStateGroups>
                 <VisualStateGroup x:Name="VirFileStates">
