--- a/Client/Dt.App/Pub/PostMgr.xaml
+++ b/Client/Dt.App/Pub/PostMgr.xaml
@@ -3,7 +3,7 @@
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:a="using:Dt.Base"
-    Home="文章列表">
+    Home="文章">
 
     <a:WinItem DockState="DockedLeft">
         <a:Tabs>
